# msstatsplus-quant-review

./: .gitignore  CSF_Spectronaut_data_vis.html  CSF_Spectronaut_protein_swap_data_vis.html  CSF_Spectronaut_sample_swap_data_vis.html  Makefile  README.md  benchmark_experiments_functions.R  clinical_cohort_processing.R  index.html  manifest.csv  pyproject.toml  review_supplement.html  swap_spectronaut_report.py
CSF_Spectronaut/: CSF_Spectronaut_analysis.R  CSF_Spectronaut_comparison_table.R  CSF_Spectronaut_model_nonmsstats_variant.R  CSF_Spectronaut_preprocess_nonmsstats.R  CSF_Spectronaut_preswap_variants.R  CSF_Spectronaut_processing.R  CSF_annotation.csv  CSF_annotation_with_Swap.csv  CSF_protein_swap_list.csv  CSF_swap_design.md  CSF_swap_visualization.html  CSF_swap_visualization.qmd  Makefile  run_csf_spectronaut_benchmark.fish  run_csf_spectronaut_benchmark_v1_log2.fish  run_csf_spectronaut_benchmark_v2_vsn.fish  run_csf_spectronaut_preprocess_nonmsstats.fish  run_csf_spectronaut_v1_log2.fish  run_msqrob2_step.R  run_msstats.R  run_msstats_preswap.R  run_nonmsstats.R  run_prolfqua_step.R  run_step_common.R
CSF_Spectronaut_protein_swap/: 20250130_163144_CSF dilutions Jan 2025 no normalization_Report_swap_group_annotation.csv  CSF_Spectronaut_swap_comparison_table.R  CSF_Spectronaut_swap_comparison_table.fish  CSF_annotation.csv  CSF_precursor_swap_visualization.qmd  CSF_protein_swap_list.csv  Makefile  README.md  run_msstats.R  run_nonmsstats.R  run_split_benchmark.fish
CSF_Spectronaut_sample_swap/: Makefile
CSF_Spectronaut_swap/: 20250130_163144_CSF dilutions Jan 2025 no normalization_Report_swap_ground_truth.tsv  (+21 more)
(+97 files in other folders)
