[project]
name = "quant-swap-tool"
version = "0.1.0"
description = "Gold-standard precursor-intensity swap for Spectronaut reports"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
