[project]
name = "quant-swap-tool"
version = "0.1.0"
description = "Gold-standard precursor-intensity swap for Spectronaut reports"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.0",
    "cyclopts>=3.0",
]

# Console entry points exposed when the package is installed. After
# `uv sync` (or `pip install -e .`) inside the venv these become
# regular commands on $PATH, no `python src/...` needed.
[project.scripts]
swap-spectronaut-report         = "swap_spectronaut_report:app"
swap-spectronaut-report-samples = "swap_spectronaut_report_samples:app"
build-subsets                   = "build_subsets:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Treat src/ as a flat module root so the .py files at src/ install as
# top-level importable modules (swap_spectronaut_report,
# swap_spectronaut_report_samples, build_subsets).
[tool.hatch.build.targets.wheel]
sources = ["src"]
include = [
    "src/swap_spectronaut_report.py",
    "src/swap_spectronaut_report_samples.py",
    "src/build_subsets.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
